# Minecraft-Clone

./: CMakeCache.txt  CMakeLists.txt  README.md
include/Game/: Block.h  BlockShader.h  Chunk.h  ChunkRenderer.h  CubeShader.h  Entity.h  Game.h  GameRenderer.h  GameShaders.h  Input.h  Player.h  TextureManager.h  Utils.h
include/Graphics/: Camera.h  GLUtil.h  IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
resources/shaders/: basic.shader  block_basic.shader  side_grass.shader
src/: CMakeLists.txt  Chunk.cpp  Game.cpp  GameRenderer.cpp  IndexBuffer.cpp  TextureManager.cpp  VertexArray.cpp  main.cpp
src/Game/: Block.cpp  Chunk.cpp  ChunkRenderer.cpp  CubeShader.cpp  Game.cpp  GameRenderer.cpp  Input.cpp  Player.cpp  TextureManager.cpp
src/Graphics/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
